--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-medium-image-zoom": "^5.2.5",
     "react-router-dom": "^6.24.0"
   },
   "devDependencies": {
